# mycelia-mesh

./: Cargo.toml  README.md
cmd/mycelia-node/: Cargo.toml
cmd/mycelia-node/src/: lib.rs  main.rs
cmd/mycelia-node/tests/: rest.rs
mesh/: Cargo.toml
mesh/src/: discovery.rs
mesh/tests/: mdns.rs  rebalance.rs
