[package]
name = "mycelia-node"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
mesh = { path = "../../mesh" }
bytes = "1"
